<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CF Converter</string>
    <string name="evc">Enter value to convert</string>
    <string name="action_settings">Settings</string>
    <string name="label_choose_cf">Choose beetwen Celsius or Farenheit</string>
    <string name="btn_convert">Convert</string>
    <string name="celsi">Celsius to Farenheit</string>
    <string name="faren">Farenheit to Celsius</string>

</resources>
