<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evc" />

    <EditText
        android:id="@+id/etValueToConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_cf" />

    <RadioGroup
        android:id="@+id/rgGradus"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <RadioButton
            android:checked="true"
            android:id="@+id/rbCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsi" />

        <RadioButton
            android:id="@+id/rbFahr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faren" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvResult"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <Button
        android:onClick="onConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/btn_convert" />


</LinearLayout>
